<resources>

    <!--Login Fragment-->
    <string name="user_id">ID</string>
    <string name="user_id_guide">Login Only Administrator</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="login_fail">Login Failed !!</string>
    <string name="caution">Caution !!</string>
    <string name="app_caution">
\n-  This app is not intended for use for health care or medical purposes.
\n-  This app aims to research and improve awareness of general wellness.
\n-  This app does not collect any personally identifiable information.
\n-  This app collects\/transmits\/stores data only with the user\'s consent.
\n-  This app does not share any collected data with any third parties.
\n-  If you Tester, click start measure.</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!--ui text-->
    <string name="submit">Submit</string>
    <string name="enter">Input</string>
    <string name="gt_header">Reference Result</string>
    <string name="welcome_message">
Welcome, %1$s!\n
\n- If you analysis corrected measure, fill all body info in blank.
\n- If measure time and ip address leave blank, set it default set.
\n- Tap the start button at the bottom of the app.
\n- Please avoid moving in an unstable lighting environment.
\n- ver. 20240528(0.1.4)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sync_data">Data Sync</string>

    <!--Measure View -->
    <string name="app_name">Vital Sync</string>
    <string name="heart_rate">심박수</string>
    <string name="heart_rate_unit">bpm</string>
    <string name="heart_rate_ews_unit">ews</string>
    <string name="respiratory_rate">호흡</string>
    <string name="respiratory_rate_unit">rpm</string>
    <string name="hrv_sdnn">HRV-SDNN</string>
    <string name="hrv_sdnn_unit">ms</string>
    <string name="oxygen_saturation">signal 1</string>
    <string name="oxygen_saturation_unit">pt</string>
    <string name="stress">Stress</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="blood_pressure_unit">mmHg</string>

    <!--Vital Analysis-->
    <string name="vital_analysis_title">생체검사&amp;전자문진</string>
    <string name="vital_analysis_warning">얼굴을 중앙에 위치해주세요.</string>
    <string name="vital_heart_rate">심박수</string>
    <string name="vital_heart_rate_unit">(bpm)</string>
    <string name="vital_oxygen_saturation">signal 1</string>
    <string name="vital_oxygen_saturation_unit">pt</string>
    <string name="vital_respiratory_rate">호흡</string>
    <string name="vital_respiratory_rate_unit">(rpm)</string>
    <string name="vital_stress">Stress</string>
    <string name="vital_hrv_sdnn">HRV-SDNN</string>
    <string name="vital_hrv_sdnn_unit">(ms)</string>
    <string name="vital_blood_pressure">Signal 2</string>
    <string name="vital_blood_pressure_unit">(mmHg)</string>
    <string name="vital_analysis_progress">분석진행률</string>
    <string name="vital_analysis_complete">생체검사 완료</string>
    <string name="vital_analysis_complete_text">문진 질의 응답을 계속 진행해주세요.\n자동으로 이동합니다.</string>
    <string name="vital_stress_normal">보통</string>
    <string name="vital_stress_danger">위험</string>
    <string name="face_no_detection">\n얼굴이 인식되지 않습니다.\n가까이 와주세요.\n</string>
    <string name="face_big_detection">\n얼굴이 너무 가깝습니다.\n조금 떨어져 주세요.\n</string>
    <string name="face_out_detection">\n얼굴이 범위를 벗어났습니다.\n화면 중앙을 향해주세요.\n</string>
    <string name="target_developer">Developer</string>
    <string name="target_guest">Guest</string>
    <string name="target_question">Select the purpose of using the application</string>
    <string name="analysis_start">Start Measure</string>
    <string name="analysis_record">Measure Record</string>
    <string name="reset_gender">reset gender</string>
    <string name="input_analysis_time">Input Analysis Time</string>
    <string name="select_gender">Select the your gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="rule_measure">Starting analyzing, don\'t move your face!!</string>
    <string name="hint_account_id">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Comfirm password</string>
    <string name="btn_text_guide_guest">Play the Demo!</string>
    <string name="hint_create_account">Don\'t you have an account?</string>

    <!--ㅡmember -->
    <string name="checkup_guest">NEW  \nCheckup  </string>
    <string name="checkup_member">Start Checkup</string>
    <string name="record_member">Measurement Records</string>
    <string name="profile_member">Health Profile</string>
    <string name="manual_member">User Manual</string>
    <string name="preference_member">Preference</string>

    <!--profile -->
    <string name="profile_title">Health Profile</string>
    <string name="profile_height">HEIGHT</string>
    <string name="profile_weight">WEIGHT</string>
    <string name="profile_age">AGE</string>
    <string name="profile_SBP">Systolic BP</string>
    <string name="profile_DBP">Diastolic BP</string>

    <!--preference -->
    <string name="preference_title">Preference</string>
    <string name="preference_analysis_time">Analysis Time</string>
    <string name="preference_ip">Dev IP</string>
    <string name="preference_camera">Rear Camera Mode</string>
    <string name="preference_tracking">Tracking Face Mode(Experimental)</string>
    <string name="preference_input_error">Check your Input !!</string>
    <!--record -->
    <string name="record_title">Measurement History</string>

</resources>