<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/gt_header"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/profile_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_text_box"
        android:paddingStart="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/profile_title">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:textSize="13sp"
            android:textAlignment="viewStart"
            android:gravity="center"
            android:text="@string/select_gender"
            tools:ignore="RtlCompat" />

        <RadioGroup
            android:id="@+id/init_view_gender_group"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/init_view_gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/gender_male"/>

            <RadioButton
                android:id="@+id/init_view_gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/gender_female"/>
        </RadioGroup>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_element"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/profile_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/profile_submit"
        app:layout_constraintVertical_bias="0"/>

    <Button
        android:id="@+id/profile_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="@drawable/drawable_btn_bg"
        android:textColor="@drawable/selector_text_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/submit"/>

</androidx.constraintlayout.widget.ConstraintLayout>