<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/preference_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/profile_title"
        android:textColor="@color/color_text_guide"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/preference_back"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/preference_title"
        app:layout_constraintBottom_toBottomOf="@id/preference_title"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_back"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:layout_margin="15dp"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/preference_title"
        app:layout_constraintBottom_toTopOf="@id/preference_submit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_text_box"
            android:paddingHorizontal="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:maxLines="1"
                android:layout_gravity="center"
                android:text="@string/preference_analysis_time">
            </TextView>
            <EditText
                android:id="@+id/preference_analysis_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:hint="@string/input_analysis_time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_text_box"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:textSize="12sp"
                android:maxLines="1"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:text="@string/preference_ip">
            </TextView>
            <EditText
                android:id="@+id/preference_ip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:hint="로컬서버 ip를 입력하세요(개발자만 이용)" />
        </LinearLayout>

        <Switch
            android:id="@+id/preference_camera_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_text_box"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:checked="false"
            android:maxLines="1"
            android:text="@string/preference_camera" />

        <Switch
            android:id="@+id/preference_face_tracking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:background="@drawable/rounded_text_box"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:checked="false"
            android:maxLines="1"
            android:text="@string/preference_tracking" />
    </LinearLayout>

    <Button
        android:id="@+id/preference_submit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.05"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:background="@drawable/drawable_btn_bg"
        android:textColor="@drawable/selector_text_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/submit"/>
</androidx.constraintlayout.widget.ConstraintLayout>