<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/view_login_caution_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caution"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/color_text_caution"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <TextView
        android:id="@+id/view_login_caution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_caution"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/color_text_guide"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/view_login_caution_title" />

    <Button
        android:id="@+id/btn_guide_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_btn_bg"
        android:textAllCaps="false"
        android:textColor="@color/color_btn_text_default_1"
        android:textSize="20sp"
        android:text="Confirm"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/view_login_caution"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/view_login_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_selector_policy"
        android:gravity="center"
        android:text="@string/privacy_policy"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_guide_confirm"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>