<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextAccountId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="@dimen/edit_text_margin_bottom"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="textUri"
        android:textColor="@color/black"
        android:textColorHint="@color/color_hint_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/edit_text_line_margin_top"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/s_line" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="@dimen/edit_text_margin_bottom"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/color_hint_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_line_margin_top"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/s_line" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="882dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edit_text_margin_bottom"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/hint_confirm_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/color_hint_text"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/imageViewConfirmPasswordBottomLine"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword" />

    <ImageView
        android:id="@+id/imageViewConfirmPasswordBottomLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_line_margin_top"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:visibility="gone"
        app:srcCompat="@drawable/s_line" />
</androidx.constraintlayout.widget.ConstraintLayout>