<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/member_checkup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintHeight_percent="0.25"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_text_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/checkup_box_on"
            android:src="@drawable/ic_heart_rate"
            android:paddingStart="30dp"
            android:paddingEnd="40dp"
            android:layout_margin="10dp"
            android:layout_weight="0.8"
            android:scaleType="centerInside"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/s_line" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/color_text_guide"
            android:gravity="center"
            android:text="@string/checkup_member"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/member_record"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.45"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_text_box"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/member_checkup">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@color/white"
            android:src="@drawable/ic_health_calendar"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_weight="0.8"
            android:scaleType="centerInside"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/s_line"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/color_text_guide"
            android:gravity="center"
            android:text="@string/record_member"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/member_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintHeight_percent="0.25"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_text_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/member_checkup">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@color/white"
            android:src="@drawable/ic_medichart"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_margin="10dp"
            android:layout_weight="0.8"
            android:scaleType="centerInside"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/s_line" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/color_text_guide"
            android:gravity="center"
            android:text="@string/profile_member"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/member_manual"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.45"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_text_box"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/member_record"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/member_profile">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@color/white"
            android:src="@drawable/ic_manual"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_weight="0.8"
            android:scaleType="centerInside"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/s_line"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/color_text_guide"
            android:gravity="center"
            android:text="@string/manual_member"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/member_preference"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintHeight_percent="0.25"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_text_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/member_profile">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@color/white"
            android:src="@drawable/ic_setting_blue"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_margin="10dp"
            android:layout_weight="0.8"
            android:scaleType="centerInside"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/s_line" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/color_text_guide"
            android:gravity="center"
            android:text="@string/profile_member"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>